minor updates, particularly updated tutorial documentation
git-svn-id: https://behaviorsearch.googlecode.com/svn/trunk@13 6183dff9-b85f-04f7-bf67-25c50494ab74

--- a/RELEASE_NOTES.TXT
+++ b/RELEASE_NOTES.TXT
@@ -1,3 +1,7 @@
+Version 0.75:
+* Added Simulated Annealing search algorithm.
+* Added "Derivative" functionality, for searching for the amount of change caused with respect to a certain parameter.
+
 
 Version 0.73:
 * Fixed possible problem behaviorsearch_gui launcher script for Linux, when JAVA_HOME was defined.
